# Example-Package-LE

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  setup.cfg
.github/workflows/: test_and_deploy.yaml  test_and_deploy.yml
example_package_le/: main.py
tests/test_unit/: test_add.py
