[metadata]
name = Peptide-Exon-Mapper
url = https://github.com/lellingboe/Peptide-Exon-Mapper
description =  Exon mapping between gtf and fasta files
long_description = file: README.md
long_description_content_type = text/markdown
author = Lachlan Ellingboe
author_email = lachlan_ellingboe@yahoo.ie
license = MIT
version = 0.0.3

[options]
packages = find:

python_requires = >=3.8

install_requires = 
    regex
    tqdm

[options.extras_require]
dev =
    bump2version
