[metadata]
name = Example_Package_lLE
url = https://github.com/lellingboe/Example_Package_LE
description =  Exon mapping between gtf and fasta files
long_description = file: README.md
long_description_content_type = text/markdown
author = Lachlan Ellingboe
author_email = lachlan_ellingboe@yahoo.ie
license = MIT
version = 0.0.2

[options]
packages = find:

python_requires = >=3.8

install_requires = 
    pytest

[options.extras_require]
dev =
    bump2version
